--- a/grid-packages/ag-grid-docs/documentation/package.json
+++ b/grid-packages/ag-grid-docs/documentation/package.json
@@ -57,7 +57,7 @@
     "@types/react-helmet": "^6.1.6",
     "ag-charts-community": "9.1.0-beta.20240219.2139",
     "ag-charts-react": "9.1.0-beta.20240219.2139",
-    "algoliasearch": "4.11.0",
+    "algoliasearch": "^4.22.1",
     "bootstrap": "4.6.0",
     "classnames": "2.3.1",
     "eslint": "7.32.0",
@@ -104,7 +104,7 @@
     "react-dom": "18.2.0",
     "react-gif-player": "0.4.2",
     "react-helmet": "6.1.0",
-    "react-instantsearch-dom": "6.39.1",
+    "react-instantsearch": "^7.5.0",
     "react-visibility-sensor": "5.1.1",
     "rehype-react": "7.2.0",
     "sass": "1.62.1",
