--- a/grid-packages/ag-grid-docs/documentation/tsconfig.json
+++ b/grid-packages/ag-grid-docs/documentation/tsconfig.json
@@ -30,8 +30,8 @@
         "./doc-pages/**/*_angular.ts",
         "./doc-pages/**/*.ts",
         "./doc-pages/**/*.tsx",
-        "./shared-types/**/*"
-, "doc-pages/component-cell-renderer/examples/cell-renderer-summary-example/customButtonComponent_reactFunctional.jsx", "doc-pages/component-cell-renderer/examples/cell-renderer-summary-example/companyRenderer_reactFunctional.jsx"    ],
+        "./shared-types/**/*",
+    ],
     "exclude": [
         "./node_modules"
     ]
