--- a/documentation/ag-grid-docs/package.json
+++ b/documentation/ag-grid-docs/package.json
@@ -52,6 +52,7 @@
     "he": "^1.2.0",
     "history": "^5.3.0",
     "lucide-react": "^0.343.0",
+    "react-markdown": "5.0.3",
     "nanostores": "^0.9.5",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
