--- a/grid-packages/ag-grid-theme-builder/package.json
+++ b/grid-packages/ag-grid-theme-builder/package.json
@@ -55,12 +55,12 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "chokidar-cli": "^3.0.0",
+    "cssnano": "^6.1.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "glob": "^10.3.10",
-    "postcss-import": "^16.0.1",
     "postcss-nesting": "^12.0.1",
     "postcss-rtlcss": "^4.0.9",
     "prettier": "^3.0.3",
