--- a/grid-packages/ag-grid-theme-builder/package.json
+++ b/grid-packages/ag-grid-theme-builder/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "dev-test": "vitest",
-    "build-css": "tsx src/ag-grid-community-themes/scripts/build-css.ts",
-    "build-types": "tsx src/ag-grid-community-themes/scripts/build-css.ts",
-    "codegen:prod": "tsx src/ag-grid-community-themes/scripts/build-css.ts && tsx src/ag-grid-community-themes/scripts/build-types.ts",
-    "codegen:dev": "tsx src/ag-grid-community-themes/scripts/build-css.ts --dev && tsx src/ag-grid-community-themes/scripts/build-types.ts",
-    "codegen:watch": "npm run codegen:dev; chokidar 'src/ag-grid-community-themes/**/*' --ignore '**/GENERATED-*' --command 'npm run codegen:dev'"
+    "build-css": "tsx src/ag-grid-community-themes/scripts/codegen.ts",
+    "build-types": "tsx src/ag-grid-community-themes/scripts/codegen.ts",
+    "codegen:prod": "tsx src/ag-grid-community-themes/scripts/codegen.ts && tsx src/ag-grid-community-themes/scripts/build-types.ts",
+    "codegen:dev": "tsx src/ag-grid-community-themes/scripts/codegen.ts --dev && tsx src/ag-grid-community-themes/scripts/build-types.ts",
+    "codegen:watch": "chokidar 'src/ag-grid-community-themes/**/*' --ignore '**/GENERATED-*' --command 'npm run codegen:dev'"
   },
   "dependencies": {
     "@ag-grid-community/client-side-row-model": "^31.1.1",
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@swc/plugin-emotion": "2.5.86",
+    "@types/postcss-import": "^14.0.3",
     "@types/react": "^18.2.15",
     "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^18.2.7",
@@ -61,6 +62,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "glob": "^10.3.10",
+    "postcss-import": "^16.0.1",
     "postcss-nesting": "^12.0.1",
     "postcss-rtlcss": "^4.0.9",
     "prettier": "^3.0.3",
