--- a/grid-packages/ag-grid-theme-builder/package.json
+++ b/grid-packages/ag-grid-theme-builder/package.json
@@ -34,6 +34,7 @@
     "@carbon/icons-react": "^11.26.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@floating-ui/react": "^0.26.9",
     "ag-charts-enterprise": "^9.1.1",
     "concurrently": "^8.2.2",
     "jotai": "^2.4.2",
