--- a/grid-packages/ag-grid-theme-builder/package.json
+++ b/grid-packages/ag-grid-theme-builder/package.json
@@ -43,6 +43,7 @@
     "react-collapsed": "^4.1.2",
     "react-dom": "18.2.0",
     "react-shadow": "^20.4.0",
+    "react-tabs": "^6.0.2",
     "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
