--- a/grid-packages/ag-grid-theme-builder/package.json
+++ b/grid-packages/ag-grid-theme-builder/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@swc/plugin-emotion": "2.5.86",
     "@types/postcss-import": "^14.0.3",
+    "@types/postcss-url": "^10.0.4",
     "@types/react": "^18.2.15",
     "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^18.2.7",
@@ -66,6 +67,7 @@
     "postcss-import": "^16.0.1",
     "postcss-nesting": "^12.0.1",
     "postcss-rtlcss": "^4.0.9",
+    "postcss-url": "^10.1.3",
     "prettier": "^3.0.3",
     "sass": "^1.71.1",
     "tsx": "^4.7.0",
